--- a/style.css
+++ b/style.css
@@ -12,29 +12,30 @@ html, body{
 
 header{
     position: fixed;
-    top: 0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: fixed;
     border-bottom: 1px solid seashell;
-    width: 100%;
-    margin: 0;
     height:69px;
+    width: 100%;
+    justify-content: space-between;
 }
 
 #logo{
-    position: fixed;
-    display: inline-block;
-    width: auto;
     height: 50px;
-    left: 10px;
-    top: 9.5px;
-    bottom: 9.5px;
+    margin-left: 10px;
+    margin-top: 9.5px;
     }
 
-    header div{
-        display: inline-block;
-        width: auto;
-        text-align: right;
-    }
+header div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 45%;
+    margin-right: 15px;
+}
 
-    header div p {
-        display: inline-block;
+header div p {
+    text-decoration: underline;
     }
