Add images for tea section

--- a/style.css
+++ b/style.css
@@ -75,4 +75,14 @@ header{
         background-color: black;
     }
 
+    /*teas section*/
+
+    #teas{
+
+    }
+
+    .container{
+        
+    }
+
     
