--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header{
     margin: 0;
     height:69px;
     background-color: black;
+    z-index: 5;
 }
 
 #logo{
@@ -78,11 +79,21 @@ header{
     /*teas section*/
 
     #teas{
-
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 
-    .container{
-        
+    .container img{
+        width: 300px;
+        height: 200px;
     }
 
+    .container p {
+        margin-top: 10px;
+    }
+
+    /*locations section*/
+
+    
     
