--- a/style.css
+++ b/style.css
@@ -66,15 +66,15 @@ header{
 
     /* mission section */
 
-    #mission{
+#mission{
         margin: 69px auto 0px;
         height: 700px;
-        width: 1000px;
+        width: 100%;
         background-image: url(./resources/img-mission-background.webp);
         background-size: cover;
     }
 
-    #mission div{
+#mission div{
         position: relative;
         top: 300px;
         background-color: black;
@@ -82,22 +82,52 @@ header{
 
     /*teas section*/
 
-    #teas{
+#teas{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
     }
 
-    .container img{
+.container img{
         width: 300px;
         height: 200px;
     }
 
-    .container p {
+.container p {
         margin-top: 10px;
     }
 
     /*locations section*/
 
+#locations{
+    background-image: url(./resources/img-locations-background.webp);
+    height: auto;
+    min-height: 500px;
+    background-size:cover;
+}
 
-    
+#locations h2{
+    padding-top: 25px;
+    color: black;
+}
+
+#flex{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#flex div {
+    background-color: black;
+    flex-basis: 300px;
+    margin: 5px;
+    margin-right: 40px;
+}
+
+@media screen and (min-width: 1053px) {
+    #flex{
+        margin-top: 100px
+    }
+}
